--- a/index.html
+++ b/index.html
@@ -13,18 +13,56 @@
     <header>
         <div class="img-logo"></div>
         <nav>
-            <p>Home</p>
+            <p class="active">Home</p>
             <p>Destinations</p>
             <p>About</p>
             <p>Partner</p>
-            <div>Login</div>
-            <div>Register</div>
+            <div class="button-1">Login</div>
+            <div class="button-2">Register</div>
         </nav>
     </header>
     <main>
+        <section class="travel">
+            <div class="block-travel">
+
+                <h1>Explore and <br>
+                    Travel
+                </h1>
+
+                <p>Holiday finder</p>
+
+                <div class="form-travel">
+                    <div class="group-inputs">
+                        <input type="text" placeholder="Location">
+
+                        <input type="text" placeholder="Activity">
+                    </div>
+
+                    <div class="group-inputs">
+                        <input type="text" placeholder="Grade">
+
+                        <input type="text" placeholder="Date">
+                    </div>
+
+                    <div class="button">Explore</div>
+
+                </div>
+
+
+
+            </div>
+
+            <div class="img-travel"></div>
+        </section>
+
+
+        <section>
+
+
+        </section>
+
         <section></section>
-        <section></section>
-        <section></section>
+
         <section></section>
     </main>
 
