--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </nav>
     </header>
     <main>
+
         <section class="travel">
             <div class="block-travel">
 
@@ -47,21 +48,61 @@
                     <div class="button">Explore</div>
 
                 </div>
-
-
-
             </div>
 
             <div class="img-travel"></div>
-        </section>
-
-
-        <section>
-
 
         </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section class="world">
 
-        <section></section>
+            <div class="img-world"></div>
+
+            <div class="block-world">
+                <h2>A new way to explore the <br>
+                    world
+                </h2>
+
+                <p> For decades travellers have reached for Lonely Planet <br>
+                    books when looking to plan and execute their perfect <br>
+                    trip, but now, they can also let Lonely Planet Experiences <br>
+                    lead the way
+                </p>
+
+                <div class="button">Learn more</div>
+            </div>
+        </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section class="destinations">
+
+        <div class="block-destinations"></div>
+            <h2>Featured destinations</h2>
+            <div class="img-destinations"></div>
+        </div>
+
+            <div class="img-catalog">
+                <div class="img-destinations-1"></div>
+                <div class="img-destinations-2"></div>
+                <div class="img-destinations-3"></div>
+                <div class="img-destinations-4"></div>
+            </div>
+
+
+        </section>
 
         <section></section>
     </main>
