assigned task of accomplishment

--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
         <br>
         <section class="destinations">
 
-        <div class="block-destinations"></div>
-            <h2>Featured destinations</h2>
-            <div class="img-destinations"></div>
-        </div>
+            <div class="block-destinations">
+                <h2>Featured destinations</h2>
+                <p>View all ></p>
+            </div>
+
 
             <div class="img-catalog">
                 <div class="img-destinations-1"></div>
@@ -101,16 +102,83 @@
                 <div class="img-destinations-4"></div>
             </div>
 
-
         </section>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <section class="guides">
 
-        <section></section>
+            <div class="block-guides">
+                <h2>Guides by Thousand <br>
+                    Sunny
+                </h2>
+
+                <p> Packed with tips and advice from our on-the-ground <br>
+                    experts, our city guides app (iOS and Android) is the <br>
+                    ultimate resource before and during a trip.
+                </p>
+
+                <div class="button">Download</div>
+            </div>
+
+            <div class="img-guides"></div>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer>
 
+        <div class="information">
+            <div class="img-logo"></div> <br>
+            <p>Plan and book your perfect trip with <br>
+                expert advice, travel tips destination <br>
+                information from us
+            </p> <br>
+            <p>©2020 Thousand Sunny. All rights reserved</p>
+        </div>
 
+        <div class="destinations">
+            <p class="active">Destinations</p> <br>
+            <p> Africa <br>
+                Antarctica <br>
+                Asia <br>
+                Europe <br>
+                America
+            </p>
+        </div>
 
+        <div class="shop">
+            <p class="active">Shop</p> <br>
+            <p>
+                Destination Guides <br>
+                Pictorial & Gifts <br>
+                Special Offers <br>
+                Delivery Times <br>
+                FAQs
+            </p>
+        </div>
 
-    <footer></footer>
+        <div class="interests">
+            <p class="active">Interests</p> <br>
+            <p>
+                Adventure Travel <br>
+                Art And Culture <br>
+                Wildlife And Nature <br>
+                Family Holidays <br>
+                Food And Drink
+            </p>
+        </div>
+
+    </footer>
 
 
 </body>
