correction of comments on footer

--- a/index.html
+++ b/index.html
@@ -147,35 +147,31 @@
         </div>
 
         <div class="destinations">
-            <p class="active">Destinations</p> <br>
-            <p> Africa <br>
-                Antarctica <br>
-                Asia <br>
-                Europe <br>
-                America
-            </p>
+            <p class="active">Destinations</p>
+            <p>Africa</p>
+            <p>Antarctica</p>
+            <p>Asia</p>
+            <p>Europe</p>
+            <p>America</p>
         </div>
 
         <div class="shop">
-            <p class="active">Shop</p> <br>
-            <p>
-                Destination Guides <br>
-                Pictorial & Gifts <br>
-                Special Offers <br>
-                Delivery Times <br>
-                FAQs
-            </p>
+            <p class="active">Shop</p>
+            <p> Destination Guides</p>
+            <p>Pictorial & Gifts</p>
+            <p>Special Offers</p>
+            <p>Delivery Times</p>
+            <p>FAQs</p>
         </div>
 
         <div class="interests">
-            <p class="active">Interests</p> <br>
-            <p>
-                Adventure Travel <br>
-                Art And Culture <br>
-                Wildlife And Nature <br>
-                Family Holidays <br>
-                Food And Drink
-            </p>
+            <p class="active">Interests</p>
+            <p>Adventure Travel</p>
+            <p> Art And Culture</p>
+            <p> Wildlife And Nature</p>
+            <p> Family Holidays</p>
+            <p>Food And Drink</p>
+
         </div>
 
     </footer>
