accomplishment of the task

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
             <p>©2020 Thousand Sunny. All rights reserved</p>
         </div>
 
-        <div class="destinations">
-            <p class="active">Destinations</p>
+        <div class="info">
+            <h3>Destinations</h3>
             <p>Africa</p>
             <p>Antarctica</p>
             <p>Asia</p>
@@ -155,8 +155,8 @@
             <p>America</p>
         </div>
 
-        <div class="shop">
-            <p class="active">Shop</p>
+        <div class="info">
+            <h3>Shop</h3>
             <p> Destination Guides</p>
             <p>Pictorial & Gifts</p>
             <p>Special Offers</p>
@@ -164,8 +164,8 @@
             <p>FAQs</p>
         </div>
 
-        <div class="interests">
-            <p class="active">Interests</p>
+        <div class="info">
+            <h3>Interests</h3>
             <p>Adventure Travel</p>
             <p> Art And Culture</p>
             <p> Wildlife And Nature</p>
